--- a/.github/workflows/docker_publish.yml
+++ b/.github/workflows/docker_publish.yml
@@ -50,6 +50,7 @@ jobs:
           type=sha
           type=ref,event=branch
           type=ref,event=pr
+          type=ref,event=tag
           type=semver,pattern=v{{version}}
     # Build and push Docker image with Buildx (don't push on PR)
     # https://github.com/docker/build-push-action
